@@ -19,6 +19,10 @@ Version 1.23
 - $autoassignclear [aac] command added.
 - $autoassignview [aav] command added.
 - Improved music service exception message. It's now less generic/vague.
+- $serverblacklist [sbl] owner only command added.
+- $serverunblacklist [subl] owner only command added.
+- $massblacklist renamed to $userblacklist
+    - Alias added: $ubl
 
 
 Version 1.22.1
